<resources>
    <string name="app_name">Lab 1.2 BMI</string>
    <string name="input_weight">Weight (kg)</string>
    <string name="input_height">Height (cm)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="result">BMI:</string>
    <string name="under">You are under weight!</string>
    <string name="normal">You are normal!</string>
    <string name="over">You are over weight!</string>
</resources>
